<resources>
    <string name="app_name">trabalho_ademar_app</string>
    <string name="participante">Cadastro do participante da SECOMP</string>
    <string name="nome">Digite seu nome</string>
    <string name="email">Digite seu email</string>
    <string name="telefone">Digite seu telefone</string>
    <string name="curso">Digite seu Curso</string>
    <string name="semestre">Digite seu semestre</string>
    <string name="interesse">Escolha sua área de interesse</string>
    <string name="inteligencia">Inteligencia artificial</string>
    <string name="rv">Realidade Virtual</string>
    <string name="ra">Realidade Aumentada</string>
    <string name="matricula">Digite sua matricula</string>
    <string name="perfil">Perfil do participante</string>
    <string name="comp">Computação</string>
    <string name="une">Unemat</string>
    <string name="ext">Externo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tamanho_camisa">escolha o tamanho da camiseta</string>
    <string-array name="tamanho_camiseta">
        <item>P</item>
        <item>M</item>
        <item>G</item>
    </string-array>
</resources>